fixes for footer on mobile

--- a/src/main/resources/static/styles.css
+++ b/src/main/resources/static/styles.css
@@ -74,7 +74,7 @@ a.link {
 .horizontal-container {
     display: flex!important;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: end;
     align-items: center;
 }
 
